--- a/simple-webapp/pom.xml
+++ b/simple-webapp/pom.xml
@@ -41,4 +41,14 @@
       </plugin>
     </plugins>
   </build>
+ <distributionManagement>
+    <repository>
+    <id>releases</id>
+    <url>http://ec2-34-230-4-220.compute-1.amazonaws.com:8081/nexus-2.14.5-02/content/repositories/releases/</url>
+    </repository>
+    <snapshotRepository>
+    <id>snapshots</id>
+    <url>http://ec2-34-230-4-220.compute-1.amazonaws.com:8081/nexus-2.14.5-02/content/repositories/snapshots/</url>
+    </snapshotRepository>
+  </distributionManagement>
 </project>
