--- a/pom.xml
+++ b/pom.xml
@@ -12,4 +12,14 @@
   <modules>
     <module>simple-webapp</module>
   </modules>
+         <distributionManagement>
+    <repository>
+    <id>releases</id>
+    <url>http://54.198.90.166:8081/nexus-2.14.5-02/content/repositories/releases/</url>
+    </repository>
+    <snapshotRepository>
+    <id>snapshots</id>
+    <url>http://54.198.90.166:8081/nexus-2.14.5-02/content/repositories/snapshots/</url>
+    </snapshotRepository>
+  </distributionManagement>
 </project>
